log/build_2026-05-16_22-09-10/dxl_wt_openarm_leader/stderr.log
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::read_present_position()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:251:7: error: ‘present_positon_’ was not declared in this scope; did you mean ‘present_position_’?
  251 |       present_positon_[id-1]= position_raw;
      |       ^~~~~~~~~~~~~~~~
      |       present_position_
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:239:15: warning: unused variable ‘current_raw’ [-Wunused-variable]
  239 |       int16_t current_raw = static_cast<int16_t>(
      |               ^~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:243:15: warning: unused variable ‘velocity_raw’ [-Wunused-variable]
  243 |       int32_t velocity_raw = static_cast<int32_t>(
      |               ^~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
